--- a/ToDoHTML/HtmlPage.html
+++ b/ToDoHTML/HtmlPage.html
@@ -3,8 +3,14 @@
 <head>
     <meta charset="utf-8" />
     <title>To Do List</title>
+    
 </head>
 <body>
-
+    <ul>
+        <li>Wash Cat</li>
+        <li>Feed Cat</li>
+        <li>Feed Cat to Dog</li>
+    </ul>
+    <script src="JavaScript.js"></script>
 </body>
 </html>
