--- a/ToDoHTML/HtmlPage.html
+++ b/ToDoHTML/HtmlPage.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <title>To Do List</title>
-    
+
+    <link href="StyleSheet.css" rel="stylesheet" />
 </head>
 <body>
     <ul>
